Fix segfault when accessing __grefcount__ before creating the GObject

When creating a new instance using Type() and trying to access
__grefcount__ before calling the subclass's __init__ function, there
used to be a segmentation fault because we were trying to access the
not yet created object. Now raise a proper exception instead.

https://bugzilla.gnome.org/show_bug.cgi?id=640434

Co-authored-by: Martin Pitt <martinpitt@gnome.org>